VespaEmbeddingStoreIT implemented + tons of refactorings